# docxlite

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
docxlite/: __init__.py  _modidx.py  core.py  skill.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
